# tallymark

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac
build-aux/: git-tar-name.txt
docs/: protocol.txt  record.txt  roadmap.txt
include/: tallymark.h  tallymark_cdefs.h  tallymark_defs.h  trendsonar.h
include/private/: tallymark_util.h
lib/libtallymark/: debug.c  debug.h  error.c  error.h  fdpoller-poll.c  fdpoller.h  hash.c  hash.h  libtallymark.h  libtallymark.sym  memory.c  memory.h  message.c  message.h  random.c  random.h  thread.c  thread.h  url.c  url.h  version.c  version.h
lib/libtallymark_util/: libtallymark_util.h  libtallymark_util.sym  socket.c  socket.h
lib/libtrendsonar/: libtrendsonar.h  libtrendsonar.sym  version.c
src/conf/: tallymark.conf-example.in
src/sockets/: socket-client.c  socket-server.c
src/tallymarkd/: conf.c  conf.h  daemon.c  daemon.h  db-dumb.c  db-flat.c  db.h  memory.c  network.c  network.h  tallymarked.c  tallymarked.h
src/tallymarked/: daemon.c  daemon.h  db.h  main.c  memory.c  network.c  tallymarked.h
src/tallymarker/: cmd-count.c  cmd-hash.c  cmd-info.c  cmd-info.h  cmd-reset.c  conf.c  conf.h  debug.c  main.c  network.h  tallymarker.c  tallymarker.h
src/tallymarkr/: cmd-count.c  cmd-count.h  cmd-debugger.c  cmd-debugger.h  cmd-hash.c  cmd-hash.h  cmd-help.c  cmd-help.h  cmd-increment.c  cmd-increment.h  cmd-info.c  cmd-record.c  cmd-record.h  cmd-reset.c  cmd-reset.h  cmd-threshold.c  cmd-threshold.h  conf.c  conf.h  debug.h  network.c  network.h  tallymarker.c  tallymarker.h
src/trendsonard/: main.c
tallymark.xcodeproj/: project.pbxproj
tallymark.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tallymark.xcodeproj/xcshareddata/xcschemes/: tallymark: Git Version.xcscheme  tallymark: all.xcscheme  tallymark: tallymark.xcscheme  tallymark: tallymarked.xcscheme  tallymark: tallymarker.xcscheme
tests/: url-parse.c
trendsonar.xcodeproj/: project.pbxproj
trendsonar.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
trendsonar.xcodeproj/xcshareddata/xcschemes/: trend sonar: git version.xcscheme  trend sonar: libtrendsonar.xcscheme  trend sonar: trendsonar.xcscheme  trend sonar: trendsonard.xcscheme
